Bring back rutine button + sidebar accordeon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <app-sidebar-second></app-sidebar-second>
       </ion-content> -->
       <!-- AQUI COMIENZA EL AREA DE RUTINA -->
-      <ion-content contentId="left-content" class="first">
+      <ion-content contentId="left-content" class="first" color="light">
         <app-sidebar-accordeon></app-sidebar-accordeon>
       </ion-content>
       <ion-content contentId="right-content" class="third">
