--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
@@ -30,6 +30,9 @@
 .my-componente2{
     align-items: center;
     text-align: center;
+    background: ar(--ion-color-primary);
+    color: var(--ion-color-primary);
+    background-color: var(--ion-color-light);
   }
 
   ion-accordion-group{
@@ -41,13 +44,12 @@
     }
   }
 
-  .custom-expanded {
-    color: #00ff00; /* Set your desired background color for expanded state */
-    /* Add other styles as needed */
+  .background{
+    background-color: var(--ion-color-light);
   }
-  
-  /* Custom styles for the collapsed accordion */
-  .custom-collapsed {
-    color: #ff0000; /* Set your desired background color for collapsed state */
-    /* Add other styles as needed */
+
+  .last_routine{
+    text-align: center;
+    align-items: center;
+    justify-items: center;
   }
