--- a/src/app/block-component/block-component.component.scss
+++ b/src/app/block-component/block-component.component.scss
@@ -22,6 +22,13 @@ $colors: (
   max-width: 2%!important;
 }
 
+.center{
+  padding-top: 2%!important;
+  max-width: 2%!important;
+  align-items: center;
+  justify-content: center;
+}
+
 .grid-cell {
   padding: 10px; /* Add padding for spacing */
   text-align: center; /* Center text within cells */
