--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
       </ion-content>
       <ion-content contentId="right-content" class="third">
         <app-block-component></app-block-component>
+        <!-- <app-dragable-test></app-dragable-test>-->
       </ion-content>
     </ion-split-pane>
   
