--- a/src/app/pop-up-load-previous-routine/pop-up-load-previous-routine.component.html
+++ b/src/app/pop-up-load-previous-routine/pop-up-load-previous-routine.component.html
@@ -8,8 +8,8 @@
 <div class="ion-text-center button-container">
   <ion-text class="top-text" >Do you want to retrive previous routines?</ion-text>
   <div class="botones">
-    <ion-button class="small-button" (click)="buttonPressed($event)">Yes</ion-button>
-    <ion-button class="small-button" (click)="NobuttonPressed($event)">No</ion-button>
+    <ion-button class="small-button" (click)="buttonPressed('yes')">Yes</ion-button>
+    <ion-button class="small-button" (click)="buttonPressed()">No</ion-button>
   </div> 
 </div>
 
