--- a/src/app/block-component/block-component.component.scss
+++ b/src/app/block-component/block-component.component.scss
@@ -36,15 +36,25 @@ $colors: (
 .grid-cell {
   //padding: 10px; /* Add padding for spacing */
   width: 80%;
-  border: 1px solid red;
-  padding: 10px;
   //width: (box-sizing + 5000px)!important;
   align-items: center; /* Center text within cells */
   color: #6002ed;
   text-align: center;
+  margin-bottom: -15px;
 }
 
 .text-inside{
   //margin-top: 10px;
   border: 1px solid green;
+}
+
+.image{
+  height:15px; 
+  width:30px; 
+  float:left;
+}
+
+.square{
+  border: 1px solid red;
+  padding: 10px;
 }
