--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
@@ -33,6 +33,7 @@
     background: ar(--ion-color-primary);
     color: var(--ion-color-primary);
     background-color: var(--ion-color-light);
+    float: center;
   }
 
   ion-accordion-group{
@@ -52,4 +53,27 @@
     text-align: center;
     align-items: center;
     justify-items: center;
+  }
+
+  .square{
+    padding: 10px;
+    width: fit-content;
+    color: black;
+  }
+
+  .blue{
+    background: var(--ion-color-tertiary);
+  }
+
+  .list_puzzle{
+    //padding: 10px; /* Add padding for spacing */
+    width: fit-content;
+    //width: (box-sizing + 5000px)!important;
+    align-items: center; /* Center text within cells */
+    text-align: center;
+    margin-bottom: -15px;
+    padding-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
