--- a/src/app/block-component/block-component.component.scss
+++ b/src/app/block-component/block-component.component.scss
@@ -32,22 +32,33 @@ $colors: (
   height: 5%!important;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .grid-cell {
-  //padding: 10px; /* Add padding for spacing */
-  width: 80%;
+  //padding: -10px; /* Add padding for spacing */
+  width: 100%;
+  height: 100%;
   //width: (box-sizing + 5000px)!important;
   align-items: center; /* Center text within cells */
   //color: #6002ed;
   text-align: center;
-  margin-bottom: -45px;
+  margin-bottom: -13px;
+  margin-top: -12px;
+  //padding-bottom: -50px;
+  //border: 1px solid green;
 }
 
-.text-inside{
-  //margin-top: 10px;
-  //border: 1px solid green;
+.group_obj{
+  //padding: 10px; /* Add padding for spacing */
+  width: 100%;
+  height: 10%;
+  //width: (box-sizing + 5000px)!important;
+  align-items: center; /* Center text within cells */
+  //color: #6002ed;
+  text-align: center;
+  //padding-bottom: -50px;
+  //border: 1px solid;
 }
 
 .image{
